--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.16.3"
@@ -9,6 +11,7 @@
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "scripts": {
